added Problem 4 c and d

--- a/sheet-01/code.ipynb
+++ b/sheet-01/code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 1,
    "id": "21eacb34",
    "metadata": {},
    "outputs": [],
@@ -2413,7 +2413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "id": "0c08c483",
    "metadata": {},
    "outputs": [
@@ -2520,7 +2520,7 @@
        "[400 rows x 2 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2532,7 +2532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "id": "74b73d8c",
    "metadata": {},
    "outputs": [],
@@ -2556,7 +2556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "id": "c3fb92c9",
    "metadata": {},
    "outputs": [
@@ -2591,7 +2591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "id": "bc777abd",
    "metadata": {},
    "outputs": [
@@ -2620,7 +2620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "id": "dc9e2750",
    "metadata": {},
    "outputs": [
@@ -2640,7 +2640,7 @@
        "(166, 264)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2692,7 +2692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "id": "3b2610f9",
    "metadata": {},
    "outputs": [
@@ -2735,7 +2735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "id": "39cdca61",
    "metadata": {},
    "outputs": [
@@ -2783,7 +2783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "id": "aa2fa90d",
    "metadata": {},
    "outputs": [
@@ -2803,7 +2803,7 @@
        "(149, 278)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2859,7 +2859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "id": "be140a14",
    "metadata": {},
    "outputs": [
@@ -2899,7 +2899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "id": "98d289a7",
    "metadata": {},
    "outputs": [],
@@ -2909,7 +2909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "id": "3997330f",
    "metadata": {},
    "outputs": [],
@@ -2919,7 +2919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "id": "2eeeff3e",
    "metadata": {},
    "outputs": [
@@ -2964,7 +2964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 14,
    "id": "7e1b2ceb",
    "metadata": {},
    "outputs": [],
@@ -3024,7 +3024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 15,
    "id": "02248296",
    "metadata": {},
    "outputs": [],
@@ -3035,7 +3035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 16,
    "id": "17d8f01b",
    "metadata": {},
    "outputs": [
@@ -3045,7 +3045,7 @@
        "(144, 273, 400)"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3060,7 +3060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 17,
    "id": "75875995",
    "metadata": {},
    "outputs": [],
@@ -3089,7 +3089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 18,
    "id": "764a3a7d",
    "metadata": {},
    "outputs": [],
@@ -3120,7 +3120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 19,
    "id": "3957bc06",
    "metadata": {},
    "outputs": [
@@ -3128,7 +3128,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Gradient Descent: 100%|██████████| 200/200 [00:02<00:00, 79.83it/s]\n"
+      "Gradient Descent: 100%|██████████| 200/200 [00:02<00:00, 81.98it/s]\n"
      ]
     },
     {
@@ -3245,7 +3245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 20,
    "id": "9d1355d6",
    "metadata": {},
    "outputs": [
@@ -3253,11 +3253,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/65/zrtbfn791rn640f82t5dqybm0000gn/T/ipykernel_55583/4115526386.py:9: DeprecationWarning: __array_wrap__ must accept context and return_scalar arguments (positionally) in the future. (Deprecated NumPy 2.0)\n",
+      "/var/folders/65/zrtbfn791rn640f82t5dqybm0000gn/T/ipykernel_2591/4115526386.py:9: DeprecationWarning: __array_wrap__ must accept context and return_scalar arguments (positionally) in the future. (Deprecated NumPy 2.0)\n",
       "  output += -_lambda[0] + df['counts'][i] * np.log(_lambda[0]) - np.log(math.factorial(df['counts'][i]))\n",
-      "/var/folders/65/zrtbfn791rn640f82t5dqybm0000gn/T/ipykernel_55583/4115526386.py:13: DeprecationWarning: __array_wrap__ must accept context and return_scalar arguments (positionally) in the future. (Deprecated NumPy 2.0)\n",
+      "/var/folders/65/zrtbfn791rn640f82t5dqybm0000gn/T/ipykernel_2591/4115526386.py:13: DeprecationWarning: __array_wrap__ must accept context and return_scalar arguments (positionally) in the future. (Deprecated NumPy 2.0)\n",
       "  output += -_lambda[1] + df['counts'][i] * np.log(_lambda[1]) - np.log(math.factorial(df['counts'][i]))\n",
-      "/var/folders/65/zrtbfn791rn640f82t5dqybm0000gn/T/ipykernel_55583/4115526386.py:17: DeprecationWarning: __array_wrap__ must accept context and return_scalar arguments (positionally) in the future. (Deprecated NumPy 2.0)\n",
+      "/var/folders/65/zrtbfn791rn640f82t5dqybm0000gn/T/ipykernel_2591/4115526386.py:17: DeprecationWarning: __array_wrap__ must accept context and return_scalar arguments (positionally) in the future. (Deprecated NumPy 2.0)\n",
       "  output += -_lambda[1] + df['counts'][i] * np.log(_lambda[1]) - np.log(math.factorial(df['counts'][i]))\n"
      ]
     },
@@ -3378,12 +3378,192 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "41997328",
+   "metadata": {},
+   "source": [
+    "### (c) MLE for $\\lambda$"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "cf9b5cb3",
+   "execution_count": 22,
+   "id": "9ea1440c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.3075"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum_counts = df['counts'].sum()\n",
+    "t_end = len(df['counts'])\n",
+    "\n",
+    "lambda_MLE = sum_counts / t_end\n",
+    "lambda_MLE.item()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7368a1ca",
+   "metadata": {},
+   "source": [
+    "### (d) Log-Likelihood Ratio Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "55b647d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1.955719232559204, 3.0479207038879395)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "_lambda_1, _lambda_2 = lambda_1.item(), lambda_2.item()\n",
+    "_lambda_1, _lambda_2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "77044806",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Old: -758.0563271257382\n",
+      "[1-144]: -251.57716812020624\n",
+      "[144-273]: -289.340304348069\n",
+      "[273-400]: -217.13885465746296\n",
+      "Log-Likelihood null hypothesis: -758.0563271257382\n",
+      "[1-144]: -246.73838456764983\n",
+      "[144-273]: -275.48466596723017\n",
+      "[273-400]: -214.3105841260799\n",
+      "Log-Likelihood alternative hypothesis: -736.5336346609599\n"
+     ]
+    }
+   ],
+   "source": [
+    "log_likelihood_null = 0.0\n",
+    "for i in range(len(df['counts'])):\n",
+    "    log_likelihood_null += (-lambda_MLE + np.log(lambda_MLE) * df['counts'][i]) - np.log(math.factorial(df['counts'][i]))\n",
+    "print('Old:', log_likelihood_null.item())\n",
+    "\n",
+    "log_likelihood_null = 0.0\n",
+    "for i in range(L):\n",
+    "    log_likelihood_null += (-lambda_MLE + np.log(lambda_MLE) * df['counts'][i]) - np.log(math.factorial(df['counts'][i]))\n",
+    "print(f'[1-{L}]: {log_likelihood_null.item()}')\n",
+    "a = log_likelihood_null.item()\n",
+    "for i in range(L, R):\n",
+    "    log_likelihood_null += (-lambda_MLE + np.log(lambda_MLE) * df['counts'][i]) - np.log(math.factorial(df['counts'][i]))\n",
+    "print(f'[{L}-{R}]: {log_likelihood_null.item() - a}')\n",
+    "b = log_likelihood_null.item()\n",
+    "for i in range(R, t_end):\n",
+    "    log_likelihood_null += (-lambda_MLE + np.log(lambda_MLE) * df['counts'][i]) - np.log(math.factorial(df['counts'][i]))\n",
+    "print(f'[{R}-{t_end}]: {log_likelihood_null.item() - b}')\n",
+    "# c = log_likelihood_alt.item()\n",
+    "print('Log-Likelihood null hypothesis:', log_likelihood_null.item())\n",
+    "\n",
+    "log_likelihood_alt = 0.0\n",
+    "for i in range(L):\n",
+    "    log_likelihood_alt += (-_lambda_1 + np.log(_lambda_1) * df['counts'][i]) - np.log(math.factorial(df['counts'][i]))\n",
+    "print(f'[1-{L}]: {log_likelihood_alt.item()}')\n",
+    "a = log_likelihood_alt.item()\n",
+    "for i in range(L, R):\n",
+    "    log_likelihood_alt += (-_lambda_2 + np.log(_lambda_2) * df['counts'][i]) - np.log(math.factorial(df['counts'][i]))\n",
+    "print(f'[{L}-{R}]: {log_likelihood_alt.item() - a}')\n",
+    "b = log_likelihood_alt.item()\n",
+    "for i in range(R, t_end):\n",
+    "    log_likelihood_alt += (-_lambda_1 + np.log(_lambda_1) * df['counts'][i]) - np.log(math.factorial(df['counts'][i]))\n",
+    "print(f'[{R}-{t_end}]: {log_likelihood_alt.item() - b}')\n",
+    "# c = log_likelihood_alt.item()\n",
+    "print('Log-Likelihood alternative hypothesis:', log_likelihood_alt.item())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "f32687d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "T-statistic: - 2 * (-758.0563271257382 - -736.5336346609599) = 43.045384929556576\n"
+     ]
+    }
+   ],
+   "source": [
+    "T_statistic = -2 * (log_likelihood_null - log_likelihood_alt)\n",
+    "# T_statistic = -2 * (log_likelihood_alt - log_likelihood_null)\n",
+    "# T_statistic = 2 * (log_likelihood_alt - log_likelihood_null)\n",
+    "print(f'T-statistic: - 2 * ({log_likelihood_null} - {log_likelihood_alt}) = {T_statistic.item()}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3037b557",
+   "metadata": {},
+   "source": [
+    "Because there are $n=2$ ($\\lambda_{bg}, \\lambda_{burst}$) number of independent parameters in the likelihood computation, we use a chi-squared test with $n-1 = 1$ degree of freedom."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "9b2fa7a2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import scipy.stats as stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "3da1d005",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p-value: 5.348466114440953e-11\n"
+     ]
+    }
+   ],
+   "source": [
+    "p_value = 1.0 - stats.chi2.cdf(T_statistic, df=1)\n",
+    "print('p-value:', p_value)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "791e1041",
+   "metadata": {},
+   "source": [
+    "**Conclusion**: Because the p-value of the $\\chi^2$ test is very small ($5.3e^{-11}$), we do not reject our null hypothesis, i.e., $\\lambda_{bg} = \\lambda_{burst} = \\lambda$."
+   ]
   }
  ],
  "metadata": {
